fix item spacing

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -612,6 +612,10 @@ p.increase
 	margin-bottom: 43px
 	padding: 0 20px
 	transition: box-shadow .2s
+	+r(1280)
+		padding: 0 10px
+	+r(1024)
+		padding: 0 20px
 	&:hover,
 	&.is-active
 		box-shadow: 0 0 0 3px $btn
